# stellar-private-payments

./: .dockerignore  .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  Trunk.toml  _typos.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
app/: ARCHITECTURE.md  Cargo.toml  LICENSE  MERKLE_BENCHMARK.md  README.md  TECHNICAL_SPEC.md  admin.html  depositTest.html  devserver.py  disclosure.html  index.html  jest.config.cjs  merkle-benchmark.html  package-lock.json  package.json  proofTest.html  test.html  zkProofTest.html
app/crates/asp-store/: Cargo.toml
app/crates/note-scanner/: Cargo.toml
app/crates/notes-store/: Cargo.toml
app/crates/pool-store/: Cargo.toml
app/crates/prover/: Cargo.toml
app/crates/prover-wasm/: Cargo.toml
app/crates/public-key-store/: Cargo.toml
app/crates/state/: Cargo.toml
app/crates/stellar/: Cargo.toml
app/crates/storage/: Cargo.toml
app/crates/types/: Cargo.toml
app/crates/utils/: Cargo.toml
app/crates/wasm_facade/: Cargo.toml
app/crates/web/: Cargo.toml
app/crates/witness/: Cargo.toml
app/css/: app.css  src.css
app/e2e/: fixtures.js  playwright.config.js
app/e2e/helpers/: download-extension.js  freighter-mock.js
app/e2e/tests/: deposit-flow.spec.js  deposit-tab.spec.js  prove.spec.js  wallet-connect.spec.js
app/js/: admin.js  app-storage.js  app.js  bridge.js  depositTest.js  disclosure.js  pool-adapter.js  prover-client.js  runtime-paths.js  stellar.js  storage-app.js  transaction-builder.js  ui.js  wallet.js  wasm-facade.js  worker.js
app/js/__mocks__/: prover-client.js  prover.js  wasm-state.js  witness.js
app/js/__tests__/: bridge.test.js  notes-store.test.js  stellar.test.js  ui.test.js  wallet.test.js  witness.test.js  worker.test.js
app/js/state/: asp-membership-store.js  asp-non-membership-fetcher.js  crypto.js  db.js  index.js  note-scanner.js  notes-store.js  pool-store.js  public-key-store.js  retention-verifier.js  sync-controller.js  utils.js  wasm.js
app/js/ui/: address-book.js  contract-reader.js  core.js  dashboard.js  errors.js  index.js  navigation.js  notes-table.js  notes-view.js  onboarding-wizard.js  onchain-state.js  op-history.js  persistent-storage.js  pool-events.js  pool.js  prover-ui.js  push-notifications.js  sync-ui.js  templates.js  transactions.js
app/js/witness/: LICENSE  compliant_test.r1cs  compliant_test.wasm  index.js  witness_calculator.js
app/src/: crypto.rs  lib.rs  merkle.rs  prover.rs  r1cs.rs  serialization.rs  sparse_merkle.rs
circuits/: Cargo.toml  LICENSE  build.rs  build_circuits.rs  build_support.rs  vk.json
circuits/src/: aspMembership.circom  aspNonMembership.circom  compliantTransaction.circom  compliant_test.circom  globalViewKey.circom  globalViewKey_2.circom  globalViewKey_4.circom  keypair.circom  lib.rs  merkleProof.circom  merkleTree.circom  merkleTreeUpdater.circom  policyTransaction.circom  policyTransactionAllowlist.circom  policyTransactionAllowlistGvk.circom  policyTransactionBlocklist.circom  policyTransactionBlocklistGvk.circom  policyTransactionBoth.circom  policyTransactionBothGvk.circom  policyTransactionOpen.circom  policyTransactionOpenGvk.circom  policyTransactionPermissioned.circom  policy_tx_2_2.circom  policy_tx_2_2_A.circom  policy_tx_2_2_AB.circom  policy_tx_2_2_B.circom  policy_tx_2_2_allowlist.circom  policy_tx_2_2_blocklist.circom  policy_tx_2_2_both.circom  policy_tx_2_2_open.circom  policy_tx_2_2_permissioned.circom  policy_tx_gvk_2_2_AB_traceable.circom  policy_tx_gvk_2_2_AB_viewonly.circom  policy_tx_gvk_2_2_A_traceable.circom  policy_tx_gvk_2_2_A_viewonly.circom  policy_tx_gvk_2_2_B_traceable.circom  policy_tx_gvk_2_2_B_viewonly.circom  policy_tx_gvk_2_2_traceable.circom  policy_tx_gvk_2_2_viewonly.circom  selectiveDisclosure.circom  (+9 more)
circuits/src/core/: merkle.rs
circuits/src/poseidon2/: poseidon2_compress.circom  poseidon2_hash.circom  poseidon2_perm.circom  poseidon2_sponge.circom
circuits/src/smt/: smthash_poseidon2.circom  smtverifier.circom  smtverifierlevel.circom
circuits/src/test/: circom_tester.rs  merkleProof_3.circom  merkleProof_5.circom  mod.rs  poseidon2_hash_2.circom  prove_compliance.rs  prove_global_view_key.rs  prove_keypair.rs  prove_keypar.rs  prove_merkle.rs  prove_policy.rs  prove_poseidon2.rs  prove_selective_disclosure.rs  prove_sparse.rs  prove_transaction.rs
circuits/src/tools/: input.json  membership_leaf.txt  soroban_pack.js
circuits/test/: merkleProof_3.circom
circuits/tests/: build_support.rs  package-lock.json  package.json
circuits/tests/spec/: merkleproof.test.js  transaction.test.js
cli/: Cargo.toml  README.md  build.rs  integration-test.sh
cli/src/: account.rs  admin.rs  artifacts.rs  cli.rs  config.rs  crypto.rs  db.rs  display.rs  explorer.rs  keys.rs  logging.rs  main.rs  merkle.rs  notes.rs  onboard.rs  output.rs  proof.rs  runtime.rs  session.rs  signer.rs  signing.rs  stellar.rs  stellar_cli.rs  sync.rs  transaction.rs
cli/src/cmd/: chain.rs  config.rs  disclaimer.rs  feed.rs  keys.rs  license.rs  mod.rs  overview.rs  pool.rs  register.rs  version.rs
cli/src/config/: mod.rs  toml.rs
contracts/aspMembership/: Cargo.toml
contracts/aspMembership/src/: lib.rs  test.rs
contracts/circom-groth16-verifier/: Cargo.toml  build.rs
contracts/circom-groth16-verifier/src/: lib.rs  test.rs
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: lib.rs  pool_asp_integration.rs
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs  merkle.rs  merkle_with_history.rs  policy.rs  pool.rs  (+1 more)
contracts/public-key-registry/: Cargo.toml
contracts/soroban-utils/: Cargo.toml
e2e-tests/: Cargo.toml
e2e-tests/src/: lib.rs
sdk/client/: Cargo.toml  README.md
sdk/pool/: Cargo.toml
sdk/tests/: Cargo.toml
sdk/types/: Cargo.toml
sdk/web/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
tools/bootnode/: Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.no-https.yml  docker-compose.yml
tools/ceremony-cli/: Cargo.toml  README.md
(+447 files in other folders)
