
# TODO(template) update for the crate name
[workspace]
members = ["circuits", "contracts/*", "examples", "poseidon2", "template_crate"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
# TODO(template) update for your repository
repository = "https://github.com/NethermindEth/rust-template"
license = "Apache-2.0" # TODO(template) update license if needed
publish = false

[workspace.dependencies]
soroban-sdk = "23.0.2"

[workspace.lints.rust]
missing_docs = "deny"
# TODO(template) if you use any unsafe code, then running miri in CI is a must
# if for a crate in the workspace you need an unsafe code
# prefer to preserve forbid for the workspace
# and allowing only at a specific crate level
unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
