[workspace]
members = ["circuits", "contracts/*", "e2e-tests", "examples", "poseidon2"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/stellar-private-transactions"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
ark-bn254 = "=0.4.0"
ark-ec = "=0.4.2"
ark-ff = "=0.4.2"
asp-membership = { path = "contracts/asp-membership" }
asp-non-membership = { path = "contracts/asp-non-membership" }
circom-groth16-verifier = { path = "contracts/circom-groth16-verifier" }

soroban-sdk = { git = "https://github.com/NethermindEth/rs-soroban-sdk", branch = "feature/bn254-neg-trait", features = ["hazmat", "testutils"] }
soroban-utils = { path = "contracts/soroban-utils" }
zkhash = { path = "poseidon2" }

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
