[package]
name = "app"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
console_error_panic_hook = { version = "0.1.7", default-features = false }
serde-wasm-bindgen = { version = "0.6", default-features = false }
wasm-bindgen = { version = "0.2.100", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }

[lints]
workspace = true
