[package]
name = "circuits"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["std"]
std = []
circom-tests = [
    "std",
    "dep:ark-circom",
    "dep:ark-serialize",
    "dep:anyhow",
    "dep:ark-groth16",
    "dep:ark-snark",
    "dep:num-bigint",
    "dep:num-integer",
]

[dependencies]
# Core dependencies (always available, no_std compatible)
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
zkhash = { workspace = true }

# Optional dependencies (for circom-tests feature)
anyhow = { workspace = true, optional = true }
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat.git", rev = "09e92d4c5887cec9ea558dc7e775a8ab3b02aafc", default-features = false, optional = true }
ark-groth16 = { workspace = true, optional = true }
ark-serialize = { workspace = true, optional = true }
ark-snark = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
num-integer = { workspace = true, optional = true }

[dev-dependencies]
# Enable circom-tests deps for running tests
anyhow = { workspace = true }
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat.git", rev = "09e92d4c5887cec9ea558dc7e775a8ab3b02aafc", default-features = false }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-snark = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat.git", rev = "09e92d4c5887cec9ea558dc7e775a8ab3b02aafc", default-features = false }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = "0.5.0"
ark-snark = { workspace = true }
ark-std = { workspace = true }
compiler = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
constraint_generation = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
constraint_writers = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
num-bigint = { workspace = true }
parser = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
program_structure = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
regex = "1"
serde_json = "1.0"
type_analysis = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
wast = "39.0.0"

[lints]
workspace = true
