[package]
name = "circuits"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["std"]
std = [
    "anyhow",
    "ark-bn254",
    "ark-circom",
    "ark-ff",
    "ark-groth16",
    "ark-serialize",
    "ark-snark",
    "ark-std",
    "num-bigint",
    "num-integer",
]

[dependencies]

# Test utilities dependencies (std only — used by the `test` module)
anyhow = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat.git", rev = "09e92d4c5887cec9ea558dc7e775a8ab3b02aafc", default-features = false, optional = true }
ark-ff = { workspace = true, optional = true }
ark-groth16 = { workspace = true, optional = true }
ark-serialize = { workspace = true, optional = true }
ark-snark = { workspace = true, optional = true }
ark-std = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
num-integer = { workspace = true, optional = true }

# Core dependencies (no_std compatible)
zkhash = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat.git", rev = "09e92d4c5887cec9ea558dc7e775a8ab3b02aafc", default-features = false }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = "0.5.0"
ark-snark = { workspace = true }
ark-std = { workspace = true }
compiler = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
constraint_generation = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
constraint_writers = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
num-bigint = { workspace = true }
parser = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
program_structure = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
regex = "1"
serde_json = "1.0"
type_analysis = { git = "https://github.com/iden3/circom", tag = "v2.2.2" }
wast = "39.0.0"

[lints]
workspace = true
