[package]
name = "stellar-private-payments-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "CLI for Stellar Private Payments"

[package.metadata.cargo-shear]
ignored = ["reqwest"]

[[bin]]
name = "spp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
log.workspace = true
# Not referenced directly, but pulls in reqwest's rustls TLS backend for the
# binary (the `stellar` crate depends on reqwest without a TLS feature).
reqwest = { workspace = true, features = ["rustls"] }
serde.workspace = true
serde_json.workspace = true
stellar-private-payments-sdk.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml = "0.8"

[lints]
workspace = true
