[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
default = ["circom-tests"]
circom-tests = ["circuits/circom-tests"]

[dependencies]
anyhow = "1"
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
asp-membership = { workspace = true }
asp-non-membership = { workspace = true }
circom-groth16-verifier = { workspace = true }
# Circuit dependencies
circuits = { path = "../circuits", features = ["circom-tests"] }
num-bigint = "0.4"

# Contract dependencies
pool = { path = "../contracts/pool" }
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-utils = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

# Shared deps
zkhash = { workspace = true }

[lints]
workspace = true
