[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
default = ["circom-tests"]
circom-tests = ["circuits/circom-tests"]

[dependencies]
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
asp-membership = { workspace = true }
asp-non-membership = { workspace = true }
circom-groth16-verifier = { workspace = true }
# Circuit dependencies
circuits = { path = "../circuits", features = ["circom-tests"] }
num-bigint = { workspace = true }

# Contract dependencies
pool = { path = "../contracts/pool" }
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-utils = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

# Shared deps
zkhash = { workspace = true }

[lints]
workspace = true
