[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
asp-membership = { workspace = true }
asp-non-membership = { workspace = true }
circom-groth16-verifier = { workspace = true }
# Circuit dependencies
circuits = { path = "../circuits" }
num-bigint = { workspace = true }

# Contract dependencies
pool = { path = "../contracts/pool" }
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-utils = { workspace = true }

# Shared deps
zkhash = { workspace = true }

[lints]
workspace = true
