[package]
name = "circom-groth16-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
ark-bn254 = "=0.4.0"
ark-ec = "=0.4.2"
ark-ff = "=0.4.2"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[build-dependencies]
anyhow = "1"
ark-bn254 = "=0.4.0"
ark-ec = "=0.4.2"
ark-ff = "=0.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
