[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true

# This crate is only for testing, no output needed
[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
asp-membership = { workspace = true }
asp-non-membership = { workspace = true }
pool = { path = "../pool" }
circom-groth16-verifier.workspace = true
# Soroban SDK for test infrastructure
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-utils = { workspace = true }


