[package]
name = "pool"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]

# ASP contracts for cross-contract calls
asp-membership = { workspace = true }
asp-non-membership = { workspace = true }
circom-groth16-verifier.workspace = true
# Inherit the version from the workspace
soroban-sdk.workspace = true
soroban-utils.workspace = true

[dev-dependencies]
ark-bn254 = "=0.4.0"
ark-ec = "=0.4.2"
ark-ff = "=0.4.2"
soroban-sdk = { workspace = true, features = ["testutils"] }
