[package]
name = "stellar-private-payments-sdk"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "Stellar Private Payments Rust SDK"

[lib]
name = "stellar_private_payments_sdk"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
disclosure = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true }
tracing = { workspace = true }
prover = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
state = { workspace = true }
stellar = { workspace = true }
thiserror = { workspace = true }
tx-planner = { workspace = true }
types = { workspace = true, features = ["rusqlite"] }
witness = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-timer = "3"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }

[lints]
workspace = true
