[package]
name = "sdk-tests"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false
description = "Tests for the Stellar Private Payments SDK"

[lib]
name = "sdk_tests"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
stellar-private-payments-sdk = { workspace = true }
types = { workspace = true, features = ["rusqlite"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# external
rusqlite = { workspace = true, features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# external
rusqlite = { workspace = true }

[lints]
workspace = true
