[package]
name = "types"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
rusqlite = ["dep:rusqlite"]

[dependencies]
# external
anyhow = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uint = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# external
rusqlite = { workspace = true, optional = true, features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# external
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
# external
serde_json = { workspace = true, features = ["alloc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# external
rusqlite = { workspace = true, features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# external
rusqlite = { workspace = true }

[lints]
workspace = true
