[package]
name = "bootnode"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "bootnode"
path = "src/lib.rs"

[[bin]]
name = "bootnode"
path = "bin/bootnode.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.8.9"
axum-server = "0.7.3"
clap.workspace = true
deadpool-postgres = "0.14.1"
futures.workspace = true
http.workspace = true
http-body-util = "0.1.3"
jsonrpsee = { version = "0.26.0", default-features = false, features = ["server", "macros"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.16.2"
opentelemetry = "0.28.0"
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls-acme = { version = "0.13.0", default-features = false, features = ["axum", "ring"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
stellar.workspace = true
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "set-header", "trace", "request-id"] }
tower_governor = "0.7.0"
tracing = "0.1.41"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
types.workspace = true
url = "2.5.4"

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
