[package]
name = "bootnode"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "bootnode"
path = "src/lib.rs"

[[bin]]
name = "bootnode"
path = "bin/bootnode.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { version = "0.8.9", default-features = false, features = ["tokio", "http1", "json"] }
axum-server = "0.7.3"
clap.workspace = true
deadpool-postgres = "0.14.1"
http.workspace = true
http-body-util = "0.1.3"
jsonrpsee = { version = "0.26.0", default-features = false, features = ["server", "macros"] }
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.16.2", default-features = false }
opentelemetry = { version = "0.28.0", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.28.0", default-features = false, features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.28.0", default-features = false, features = ["rt-tokio", "trace"] }
reqwest.workspace = true
rustls-acme = { version = "0.13.0", default-features = false, features = ["axum", "ring"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
stellar.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7.18", features = ["with-serde_json-1"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "set-header", "trace"] }
tower_governor = "0.7.0"
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.29.0", default-features = false }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
types.workspace = true
url = "2.5.8"

[dev-dependencies]
serde_json.workspace = true
stellar.workspace = true
types.workspace = true

[lints]
workspace = true
