[package]
name = "ceremony-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "ceremony-cli"
path = "src/main.rs"

[[bin]]
name = "zkey_to_deployment"
path = "src/bin/zkey_to_deployment.rs"

[dependencies]
anyhow.workspace = true
ark-bn254.workspace = true
ark-circom = { workspace = true, default-features = false }
ark-ff.workspace = true
ark-groth16.workspace = true
ark-serialize.workspace = true
circuit-keys.workspace = true
clap = { version = "4.5.40", features = ["derive"] }
getrandom.workspace = true
glob = "0.3.3"
num-bigint.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["std"] }
shlex = "1.3.0"
zeroize = "1.8.1"

[lints]
workspace = true
