[package]
name = "asp-store"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "In-memory Poseidon2 Merkle tree with SQLite-backed ASP membership state"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
storage = { workspace = true }
utils = { workspace = true }

[lints]
workspace = true
