[package]
name = "public-key-store"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "Public key registration store with SQLite-backed persistence"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
storage = { workspace = true }

[lints]
workspace = true
