[package]
name = "state"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "SQLite-backed application state"

[dependencies]
anyhow = { workspace = true }
futures = { version = "0.3.32", default-features = false, features = ["async-await"] }
hex = { workspace = true }
log = "0.4"
rusqlite = { version = "0.39.0", default-features = false, features = ["buildtime_bindgen"] }
rusqlite_migration = { version = "2.5.0", default-features = false }
serde = { workspace = true }
stellar = { path = "../stellar" }
types = { path = "../types" }

#[lints]
#workspace = true
