[package]
name = "state"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "SQLite-backed application state"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
prover = { workspace = true }
rusqlite = { version = "0.39.0", default-features = false, features = ["buildtime_bindgen"] }
rusqlite_migration = { version = "2.5.0", default-features = false }
serde = { workspace = true }
stellar = { workspace = true }
types = { path = "../types" }

#[lints]
#workspace = true
